// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Presentational component tests CSVArea component tests should render proper CSVArea component 1`] = `
<div
  className="span10"
>
  <br />
  <h3>
    Select a CSV file with account specific data.
  </h3>
  <div>
    <input
      accept="text/csv"
      onChange={[Function]}
      type="file"
    />
  </div>
  <br />
</div>
`;

exports[`Presentational component tests CSVErrors component tests CSVErrors visibility tests should collapse and uncollapse CSVErrors area 1`] = `
<div
  className="span10"
>
  <br />
  <h3
    style={
      Object {
        "color": "red",
      }
    }
  >
    Errors in your CSV file.
  </h3>
  <div>
    <button
      className="btn"
      id="csv-errors-visibility-button"
      onClick={[Function]}
    >
      Open Errors List
    </button>
  </div>
  <br />
</div>
`;

exports[`Presentational component tests CSVErrors component tests should render proper CSVErrors component with more than one error 1`] = `
<div
  className="span10"
>
  <br />
  <h3
    style={
      Object {
        "color": "red",
      }
    }
  >
    Errors in your CSV file.
  </h3>
  <div>
    <button
      className="btn"
      id="csv-errors-visibility-button"
      onClick={[Function]}
    >
      Collapse Errors List
    </button>
    <div>
      <div>
        <h4>
          Row: 
          1
        </h4>
        <ul>
          <li>
            SalesForce Account Id cannot be left empty, must start with 001 and be followed by only letters and numbers
          </li>
          <li>
            Primary Phone cannot be left empty and must be a valid phone number
          </li>
        </ul>
      </div>
      <div>
        <h4>
          Row: 
          2
        </h4>
        <ul>
          <li>
            SalesForce Account Id cannot be left empty, must start with 001 and be followed by only letters and numbers
          </li>
        </ul>
      </div>
    </div>
  </div>
  <br />
</div>
`;

exports[`Presentational component tests CSVErrors component tests should render proper CSVErrors component with no errors 1`] = `
<div
  className="span10"
>
  <br />
  <h3
    style={
      Object {
        "color": "red",
      }
    }
  >
    Errors in your CSV file.
  </h3>
  <div>
    <button
      className="btn"
      id="csv-errors-visibility-button"
      onClick={[Function]}
    >
      Open Errors List
    </button>
    <div />
  </div>
  <br />
</div>
`;

exports[`Presentational component tests Intro component tests should render proper Intro component 1`] = `
<div
  className="span10"
>
  <br />
  <h1>
    Global Account Registration for YodleLive
  </h1>
</div>
`;
